added goHomeIcon to the top left corner

--- a/french/pages/exercise_concordance_conditional.html
+++ b/french/pages/exercise_concordance_conditional.html
@@ -391,6 +391,9 @@
                     </ol>
                 </section>
 
+                <iframe src="partials/goHomeIcon.html"
+                    onload="this.before(...(this.contentWindow.document.body||this.contentWindow.document).children);this.remove()"></iframe>
+
                 <iframe src="partials/errorCounter.html"
                     onload="this.before(...(this.contentWindow.document.body||this.contentWindow.document).children);this.remove()"></iframe>
 
