made input wide for text exercise for conditional perfect

--- a/french/pages/exercise_conditionalperfect.html
+++ b/french/pages/exercise_conditionalperfect.html
@@ -31,13 +31,13 @@
                 <ol>
                     <li>
                         Avec un peu plus d’étude, (<b title="j'aurais réussi">je réussir</b>)
-                        <input type="text" pattern="j'aurais réussi">
+                        <input type="text" class="wide" pattern="j'aurais réussi">
                         l’examen.
                     </li>
 
                     <li>
                         Sans l’argent que tu m’as prêté, (<b title="je n'aurais pas pu">je ne pas pouvoir</b>)
-                        <input type="text" pattern="je n'aurais pas pu">
+                        <input type="text" class="wide" pattern="je n'aurais pas pu">
                         aller à l’épicerie.
                     </li>
 
@@ -62,7 +62,7 @@
 
                     <li>
                         Est-ce que vous (<b title="n'auriez pas trouvé">ne pas trouver</b>)
-                        <input type="text" pattern="n'auriez pas trouvé">
+                        <input type="text" class="wide" pattern="n'auriez pas trouvé">
                         un téléphone cellulaire ?
                     </li>
 
@@ -74,26 +74,26 @@
 
                     <li>
                         Sans cette pluie qui ne cesse de tomber,
-                        nous (<b title="ous serions amusés">s'amuser</b>)
-                        <input type="text" pattern="nous serions amusés">
+                        nous (<b title="nous serions amusés">s'amuser</b>)
+                        <input type="text" class="extra-wide" pattern="nous serions amusés">
                         .
                     </li>
 
                     <li>
-                        Je (<b title="serais allé">aller</b>)
-                        <input type="text" pattern="serais allé">
+                        (<b title="Je serais allé">Je aller</b>)
+                        <input type="text" pattern="[Jj]e serais allé">
                         avec vous, si vous me l’aviez proposé.
                     </li>
 
                     <li>
                         En cherchant davantage, nous (<b title="aurions découvert">découvrir</b>)
-                        <input type="text" pattern="aurions découvert">
+                        <input type="text" class="wide" pattern="aurions découvert">
                         le trésor.
                     </li>
 
                     <li>
                         Sans cet accident, je (<b title="me serais souvenu">se souvenir</b>)
-                        <input type="text" pattern="me serais souvenu">
+                        <input type="text" class="wide" pattern="me serais souvenu">
                         du nom de mes amis.
                     </li>
 
@@ -111,13 +111,13 @@
 
                     <li>
                         Je (<b title="me serais servi">se servir</b>)
-                        <input type="text" pattern="me serais servi">
+                        <input type="text" class="wide" pattern="me serais servi">
                         une assiette de fromages, si j’avais eu faim.
                     </li>
 
                     <li>
                         Sans son manteau et ses gants, ils (<b title="seraient morts">mourir</b>)
-                        <input type="text" pattern="seraient morts">
+                        <input type="text" class="wide" pattern="seraient morts">
                         de froid.
                     </li>
 
@@ -135,7 +135,7 @@
 
                     <li>
                         Les étudiantes (<b title="se seraient assises">s’asseoir</b>)
-                        <input type="text" pattern="se seraient assises">
+                        <input type="text" class="wide" pattern="se seraient assises">
                         sur un banc en vous attendant.
                     </li>
 
@@ -147,9 +147,9 @@
 
                     <li>
                         Autrefois, je (<b title="n'aurais rien dit">ne rien dire</b>)
-                        <input type="text" pattern="n'aurais rien dit">
+                        <input type="text" class="wide" pattern="n'aurais rien dit">
                         ,je (<b title="me serais tu">se taire</b>)
-                        <input type="text" pattern="me serais tu">
+                        <input type="text" class="wide" pattern="me serais tu">
                         .
                     </li>
 
@@ -185,7 +185,7 @@
 
                     <li>
                         Il (<b title="aurait mieux valu">mieux valoir</b>)
-                        <input type="text" pattern="aurait mieux valu">
+                        <input type="text" class="wide" pattern="aurait mieux valu">
                         que tu arrives plus tôt.
                     </li>
 
@@ -233,8 +233,8 @@
                     </li>
 
                     <li>
-                        S’il avait fait beau, nous (<b title="serions promenés">se promener</b>)
-                        <input type="text" pattern="serions promenés">
+                        S’il avait fait beau, nous (<b title="nous serions promenés">se promener</b>)
+                        <input type="text" class="extra-wide" pattern="nous serions promenés">
                         dans le parc.
                     </li>
 
@@ -246,19 +246,19 @@
 
                     <li>
                         (<b title="J'aurais espéré">Je espérer</b>)
-                        <input type="text" pattern="[Jj]'aurais espéré">
+                        <input type="text" class="wide" pattern="[Jj]'aurais espéré">
                         que notre relation évolue différemment.
                     </li>
 
                     <li>
                         En cas de crise, ils (<b title="auraient appelé">appeler</b>)
-                        <input type="text" pattern="auraient appelé">
+                        <input type="text" class="wide" pattern="auraient appelé">
                         l’ambulance ou la police.
                     </li>
 
                     <li>
                         Les filles (<b title="seraient venues">venir</b>)
-                        <input type="text" pattern="seraient venues">
+                        <input type="text" class="wide" pattern="seraient venues">
                         au cinéma avec nous, si nous leur en avions parlé.
                     </li>
 
@@ -276,19 +276,19 @@
 
                     <li>
                         Mes voisins (<b title="auraient recueilli">recueillir</b>)
-                        <input type="text" pattern="auraient recueilli">
+                        <input type="text" class="wide" pattern="auraient recueilli">
                         un beau petit chat abandonné.
                     </li>
 
                     <li>
                         Les enfants (<b title="se seraient endormis">s’endormir</b>)
-                        <input type="text" pattern="se seraient endormis">
+                        <input type="text" class="extra-wide" pattern="se seraient endormis">
                         très facilement.
                     </li>
 
                     <li>
                         Cet accusé (<b title="se serait défendu">se défendre</b>)
-                        <input type="text" pattern="se serait défendu">
+                        <input type="text" class="wide" pattern="se serait défendu">
                         avec l’énergie du condamné.
                     </li>
 
