added pdf for theory

--- a/french/index.html
+++ b/french/index.html
@@ -23,31 +23,28 @@
 
   <div class="card">
     <header>Le présent</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F25162885_Le_pr_sent_de_l_indicatif_site_web.pdf">théorie</a>
+    <a href="pdf/present.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20pr%C3%A9sent">exercice de liste de verbes</a>
     <a href="pages/exercise_present.html">exercice de texte</a>
   </div>
 
   <div class="card">
     <header>Le passé composé</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1136364813_Le_pass__compos__conjugaison_et_accords_d_butant.pdf">théorie</a>
+    <a href="pdf/presentperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">exercice de liste de verbes</a>
     <a href="pages/exercise_presentperfect.html">exercice de texte</a>
   </div>
 
   <div class="card">
     <header>L'imparfait</header>
-    <a href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1376846899_l_imparfait_conjugaison.pdf">théorie</a>
+    <a href="pdf/imperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?L'imparfait">exercice de liste de verbes</a>
     <a href="pages/exercise_imperfect.html">exercice de texte</a>
   </div>
 
   <div class="card">
     <header>Le futur simple</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F738776285_Le_futur_simple_conjugaison.pdf">théorie</a>
+    <a href="pdf/future.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20futur%20simple">exercice de liste de verbes</a>
     <a href="pages/exercise_future.html">exercice de texte</a>
   </div>
@@ -61,16 +58,14 @@
 
   <div class="card">
     <header>Le conditionnel présent</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F601395165_Le_conditionnel_present_conjugaison.pdf">théorie</a>
+    <a href="pdf/conditionalpresent.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20conditionnel%20pr%C3%A9sent">exercice de liste de verbes</a>
     <a href="pages/exercise_conditionalpresent.html">exercice de texte</a>
   </div>
 
   <div class="card">
     <header>Le conditionnel passé</header>
-    <a
-      href="https://oraprdnt.uqtr.uquebec.ca/portail/docs/GSC2213/F1452529716_Le_conditionnel_passe_conjugaison.pdf">théorie</a>
+    <a href="pdf/conditionalperfect.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20conditionnel%20passé">exercice de liste de verbes</a>
     <a href="pages/exercise_conditionalperfect.html">exercice de texte</a>
   </div>
@@ -95,8 +90,7 @@
 
   <div class="card">
     <header>Les phrases de condition</header>
-    <a
-      href="pdf/concordance_conditional.pdf">théorie</a>
+    <a href="pdf/concordance_conditional.pdf">théorie</a>
     <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
   </div>
 
