--- a/french/pages/exercise_conditionalperfect.html
+++ b/french/pages/exercise_conditionalperfect.html
@@ -105,7 +105,7 @@
 
                     <li>
                         En allant à la campagne, nous (<b title="aurions cueilli">cueillir</b>)
-                        <input type="text" pattern="aurions cueilli">
+                        <input type="text" class="wide" pattern="aurions cueilli">
                         des petits fruits.
                     </li>
 
@@ -300,7 +300,7 @@
 
                     <li>
                         Cette actrice américaine (<b title="aurait disparu">disparaître</b>)
-                        <input type="text" pattern="aurait disparu">
+                        <input type="text" class="wide" pattern="aurait disparu">
                         de chez elle hier.
                     </li>
                 </ol>
