--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -54,7 +54,7 @@
                         <th colspan="2">conditionnel passé</th>
                         <th colspan="2">futur antérieur</th>
 
-                        <th colspan="3">concordance</th>
+                        <th colspan="3">concordance des temps</th>
                     </tr>
                     <tr>
                         <!-- A1 -->
