added exercise for passive

--- a/french/index.html
+++ b/french/index.html
@@ -94,6 +94,12 @@
     <a href="pages/exercise_concordance_conditional.html">exercice de texte</a>
   </div>
 
+  <div class="card">
+    <header>La forme passive</header>
+    <a href="pdf/passive.pdf">théorie</a>
+    <a href="pages/exercise_passive.html">exercice de texte</a>
+  </div>
+
   <hr />
 
   <h3>
