--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -93,7 +93,7 @@
                         <th>texte</th>
 
                         <!-- passif -->
-                        <th>texte</th>
+                        <th><a href="exercise_passive.html">texte</a></th>
 
                         <!-- B2 -->
                         <!-- conditionnel passé -->
@@ -144,7 +144,7 @@
                             <td class=""></td>
                             <td class=""></td>
 
-                            <td class="passive"></td>
+                            <td class="exercise_passive.html"></td>
 
                             <!-- B2 -->
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
