--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -31,8 +31,8 @@
                 <p>Conseils d’une amie</p>
 
                 <p>
-                    Si j’étais à ta place, je (<b title="arrêterais">arrêter</b>)
-                    <input type="text" pattern="arrêterais">
+                    Si j’étais à ta place, (<b title="j'arrêterais">je arrêter</b>)
+                    <input type="text" pattern="j'arrêterais">
                     de travailler tout le temps; je (<b title="rentrerais">rentrer</b>)
                     <input type="text" pattern="rentrerais">
                     chez moi; je (<b title="me ferais">se faire</b>)
@@ -43,8 +43,8 @@
                     <input type="text" pattern="demanderais">
                     de me faire une nouvelle tête. (<b title="J'irais">Je aller</b>)
                     <input type="text" pattern="[Jj]'irais">
-                    aussi magasiner et je (<b title="achèterais">acheter</b>)
-                    <input type="text" pattern="achèterais">
+                    aussi magasiner et (<b title="j'achèterais">je acheter</b>)
+                    <input type="text" pattern="j'achèterais">
                     des nouveaux vêtements. Je
                     (<b title="téléphonerais">téléphoner</b>)
                     <input type="text" pattern="téléphonerais">
