--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -212,8 +212,10 @@
                     <li>
                         <div>
                             <span title="nous rencontrerions sans tarder">Nous nous rencontrerons sans tarder.</span>
-                            <span>Vous avez bien que nous <input type="text" pattern="nous rencontrerions sans tarder">
-                                ?</span>
+                            <span>Vous avez bien dit que nous
+                                <input type="text" pattern="nous rencontrerions sans tarder">
+                                ?
+                            </span>
                         </div>
                     </li>
 
