--- a/french/pages/exercise_pastperfect.html
+++ b/french/pages/exercise_pastperfect.html
@@ -163,7 +163,7 @@
 
                     <li>
                         Quand elles (<b title="s'étaient aperçues">s’apercevoir</b>)
-                        <input type="text" class="wide" pattern="s'étaient aperçues">
+                        <input type="text" class="extra-wide" pattern="s'étaient aperçues">
                         de leur erreur, elles ont rougi.
                     </li>
 
