added conjugations for imperative tense

--- a/french/index.html
+++ b/french/index.html
@@ -50,6 +50,13 @@
   </div>
 
   <div class="card">
+    <header>L'impératif</header>
+    <a href="pdf/imperative.pdf">théorie</a>
+    <a href="pages/conjugations.html?L%27impératif">exercice de liste de verbes</a>
+    <a href="">exercice de texte</a>
+  </div>
+
+  <div class="card">
     <header>Le plus-que-parfait</header>
     <a href="pdf/plus-que-parfait.pdf">théorie</a>
     <a href="pages/conjugations.html?Le%20plus-que-parfait">exercice de liste de verbes</a>
