--- a/french/pages/conjugations_mixed.html
+++ b/french/pages/conjugations_mixed.html
@@ -63,6 +63,9 @@
                     <input type="checkbox" class="verb-tense-checkbox" name="conditionalperfect" checked="checked">Le
                     conditionnel passé
                 </label>
+                <label>
+                    <input type="checkbox" class="verb-tense-checkbox" name="imperative" checked="checked">L'impératif
+                </label>
 
                 <h4>Conjuguez ces <span id="number-of-verbs"></span> verbes.</h4>
             </header>
