--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -68,7 +68,7 @@
 
                         <!-- A2 -->
                         <!-- imparfait -->
-                        <th><a href="conjugations.html?L'imparfait">liste</a></th>
+                        <th><a href="conjugations.html?L%27imparfait">liste</a></th>
                         <th><a href="exercise_imperfect.html">texte</a></th>
 
                         <!-- futur simple -->
@@ -76,7 +76,7 @@
                         <th><a href="exercise_future.html">texte</a></th>
 
                         <!-- impératif -->
-                        <th>liste</th>
+                        <th><a href="conjugations.html?L%27impératif">liste</a></th>
                         <th>texte</th>
 
                         <!-- B1 -->
