added text exercises for imperative

--- a/french/index.html
+++ b/french/index.html
@@ -53,7 +53,7 @@
     <header>L'impératif</header>
     <a href="pdf/imperative.pdf">théorie</a>
     <a href="pages/conjugations.html?L%27impératif">exercice de liste de verbes</a>
-    <a href="">exercice de texte</a>
+    <a href="pages/exercise_imperative.html">exercice de texte</a>
   </div>
 
   <div class="card">
