--- a/french/pages/exercise_conditionalpresent.html
+++ b/french/pages/exercise_conditionalpresent.html
@@ -116,81 +116,63 @@
                 </div>
                 <ol>
                     <li>
-                        <div>
-                            <span title="ramèneraient le bébé de la garderie.">de ramener le bébé de la garderie.</span>
-                            <span>qu'ils <input type="text" pattern="ramèneraient le bébé de la garderie[.]?"></span>
-                        </div>
+                        <span title="ramèneraient le bébé de la garderie.">de ramener le bébé de la garderie.</span>
+                        <span>qu'ils &nbsp;<input type="text" pattern="ramèneraient le bébé de la garderie[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="achèterait du dessert.">d'acheter du dessert.</span>
-                            <span>que Lise <input type="text" pattern="achèterait du dessert[.]?"></span>
-                        </div>
+                        <span title="achèterait du dessert.">d'acheter du dessert.</span>
+                        <span>que Lise &nbsp;<input type="text" pattern="achèterait du dessert[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="sèmerait des plants.">de semer des plants.</span>
-                            <span>que Rémi <input type="text" pattern="sèmerait des plants[.]?"></span>
-                        </div>
+                        <span title="sèmerait des plants.">de semer des plants.</span>
+                        <span>que Rémi &nbsp;<input type="text" pattern="sèmerait des plants[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="achèveraient la peinture.">d'achever la peinture.</span>
-                            <span>qu'ils <input type="text" pattern="achèveraient la peinture[.]?"></span>
-                        </div>
+                        <span title="achèveraient la peinture.">d'achever la peinture.</span>
+                        <span>qu'ils &nbsp;<input type="text" pattern="achèveraient la peinture[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="emmènerait les enfants au cirque.">d'emmener les enfants au cirque.</span>
-                            <span>que Jean <input type="text" pattern="emmènerait les enfants au cirque[.]?"></span>
-                        </div>
+                        <span title="emmènerait les enfants au cirque.">d'emmener les enfants au cirque.</span>
+                        <span>que Jean &nbsp;<input type="text" pattern="emmènerait les enfants au cirque[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="soulèverait la question à la réunion.">de soulever la question à la
-                                réunion.</span>
-                            <span>que Pierre <input type="text"
-                                    pattern="soulèverait la question à la réunion[.]?"></span>
-                        </div>
+                        <span title="soulèverait la question à la réunion.">de soulever la question à la
+                            réunion.</span>
+                        <span>que Pierre &nbsp;<input type="text"
+                                pattern="soulèverait la question à la réunion[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="se promèneraient au parc.">de se promener au parc.</span>
-                            <span>qu'elles <input type="text" pattern="se promèneraient au parc[.]?"></span>
-                        </div>
+                        <span title="se promèneraient au parc.">de se promener au parc.</span>
+                        <span>qu'elles &nbsp;<input type="text" pattern="se promèneraient au parc[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="enlèveraient ces vieux rideaux rouges.">d'enlever ces vieux rideaux
-                                rouges.</span>
-                            <span>qu'ils <input type="text" pattern="enlèveraient ces vieux rideaux rouges[.]?"></span>
-                        </div>
+
+                        <span title="enlèveraient ces vieux rideaux rouges.">d'enlever ces vieux rideaux
+                            rouges.</span>
+                        <span>qu'ils &nbsp;<input type="text"
+                                pattern="enlèveraient ces vieux rideaux rouges[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="ne harcèlerait plus le petit voisin.">de ne plus harceler le petit
-                                voisin.</span>
-                            <span>que Sophie <input type="text"
-                                    pattern="ne harcèlerait plus le petit voisin[.]?"></span>
-                        </div>
+                        <span title="ne harcèlerait plus le petit voisin.">de ne plus harceler le petit
+                            voisin.</span>
+                        <span>que Sophie &nbsp;<input type="text"
+                                pattern="ne harcèlerait plus le petit voisin[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="enverraient leur réponse très rapidement.">d'envoyer leur réponse très
-                                rapidement.
-                            </span>
-                            <span>q'ils <input type="text"
-                                    pattern="enverraient leur réponse très rapidement[.]?"></span>
-                        </div>
+                        <span title="enverraient leur réponse très rapidement.">d'envoyer leur réponse très
+                            rapidement.
+                        </span>
+                        <span>q'ils &nbsp;<input type="text"
+                                pattern="enverraient leur réponse très rapidement[.]?"></span>
                     </li>
                 </ol>
             </section>
@@ -200,47 +182,38 @@
 
                 <ol>
                     <li>
-                        <div>
-                            <span>Je serai présente à la réunion.
-                                <span class="whitespace"></span>
-                                --->
-                            </span>
-                            <span>Tu as bien dit que tu serais présente à la réunion ?</span>
-                        </div>
+                        <span>Je serai présente à la réunion.
+                            <span class="whitespace"></span>
+                            --->
+                        </span>
+                        <span>Tu as bien dit que tu serais présente à la réunion ?</span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="nous rencontrerions sans tarder">Nous nous rencontrerons sans tarder.</span>
-                            <span>Vous avez bien dit que nous
-                                <input type="text" pattern="nous rencontrerions sans tarder">
-                                ?
-                            </span>
-                        </div>
+                        <span title="nous rencontrerions sans tarder">Nous nous rencontrerons sans tarder.</span>
+                        <span>Vous avez bien dit que nous &nbsp;
+                            <input type="text" pattern="nous rencontrerions sans tarder">
+                            ?
+                        </span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="visiterions Paris et Bruxelles">Nous visiterons Paris et Bruxelles.</span>
-                            <span>Tu as bien dit que nous <input type="text" pattern="visiterions Paris et Bruxelles">
-                                ?</span>
-                        </div>
+                        <span title="visiterions Paris et Bruxelles">Nous visiterons Paris et Bruxelles.</span>
+                        <span>Tu as bien dit que nous &nbsp;<input type="text" pattern="visiterions Paris et Bruxelles">
+                            ?</span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="conduirait prudemment">Je conduirai prudemment.</span>
-                            <span>Elle a bien dit qu'elle <input type="text" pattern="conduirait prudemment"> ?</span>
-                        </div>
+                        <span title="conduirait prudemment">Je conduirai prudemment.</span>
+                        <span>Elle a bien dit qu'elle &nbsp;<input type="text" pattern="conduirait prudemment"> ?</span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="convaincrait les clients potentiels">Il convaincra les clients
-                                potentiels.</span>
-                            <span>Il a bien dit qu'il <input type="text" pattern="convaincrait les clients potentiels">
-                                ?</span>
-                        </div>
+                        <span title="convaincrait les clients potentiels">Il convaincra les clients
+                            potentiels.</span>
+                        <span>Il a bien dit qu'il &nbsp;<input type="text"
+                                pattern="convaincrait les clients potentiels">
+                            ?</span>
                     </li>
                 </ol>
             </section>
@@ -258,48 +231,36 @@
 
                 <ol>
                     <li>
-                        <div>
-                            <span>qu'elle ouvrira une boutique ?</span>
-                            <span>qu'elle ouvrirait une boutique.</span>
-                        </div>
+                        <span>qu'elle ouvrira une boutique ?</span>
+                        <span>qu'elle ouvrirait une boutique.</span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="qu'il se souviendrait de nous.">
-                                qu'il se souviendra de nous ?
-                            </span>
-                            <span><input type="text" pattern="qu'il se souviendrait de nous[.]?"></span>
-                        </div>
+                        <span title="qu'il se souviendrait de nous.">
+                            qu'il se souviendra de nous ?
+                        </span>
+                        <span><input type="text" pattern="qu'il se souviendrait de nous[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="que nous recevrions le premier prix.">que nous recevrons le premier prix
-                                ?</span>
-                            <span><input type="text" pattern="que nous recevrions le premier prix[.]?"></span>
-                        </div>
+                        <span title="que nous recevrions le premier prix.">que nous recevrons le premier prix
+                            ?</span>
+                        <span><input type="text" pattern="que nous recevrions le premier prix[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="qu'ils serviraient des canapés.">qu'ils serviront des canapés ?</span>
-                            <span><input type="text" pattern="qu'ils serviraient des canapés[.]?"></span>
-                        </div>
+                        <span title="qu'ils serviraient des canapés.">qu'ils serviront des canapés ?</span>
+                        <span><input type="text" pattern="qu'ils serviraient des canapés[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="qu'elle courrait le marathon.">qu'elle courra le marathon ?</span>
-                            <span><input type="text" pattern="qu'elle courrait le marathon[.]?"></span>
-                        </div>
+                        <span title="qu'elle courrait le marathon.">qu'elle courra le marathon ?</span>
+                        <span><input type="text" pattern="qu'elle courrait le marathon[.]?"></span>
                     </li>
 
                     <li>
-                        <div>
-                            <span title="qu'il lui offrirait un bijou.">qu'il lui offrira un bijou ?</span>
-                            <span><input type="text" pattern="qu'il lui offrirait un bijou[.]?"></span>
-                        </div>
+                        <span title="qu'il lui offrirait un bijou.">qu'il lui offrira un bijou ?</span>
+                        <span><input type="text" pattern="qu'il lui offrirait un bijou[.]?"></span>
                     </li>
                 </ol>
             </section>
