--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -77,7 +77,7 @@
 
                         <!-- impératif -->
                         <th><a href="conjugations.html?L%27impératif">liste</a></th>
-                        <th>texte</th>
+                        <th><a href="exercise_imperative.html">texte</a></th>
 
                         <!-- B1 -->
                         <!-- plus-que-parfait -->
