added imperative to stats

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -131,8 +131,8 @@
                             <td class="conjugations.html?Le%20futur%20simple"></td>
                             <td class="exercise_future.html"></td>
 
-                            <td class=""></td>
-                            <td class=""></td>
+                            <td class="conjugations.html?L%27imp%C3%A9ratif"></td>
+                            <td class="exercise_imperative.html"></td>
 
                             <!-- B1 -->
                             <td class="conjugations.html?Le%20plus-que-parfait"></td>
