added hints to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -52,11 +52,18 @@
                                 <input type="text" pattern="avaient">
                                 l’habitude de sortir à la Chasse-Galerie
                             </span>
+
                             qui (<b title="était">être</b>)
                             <input type="text" pattern="était">
-                            un bar étudiant qui (<b title="situait">se situer</b>)
-                            <input type="text" pattern="se situait">
-                            sur le campus de l’université.
+                            <span class="sentence-with-hint">
+                                <span class="hint"
+                                    title="L’imparfait: une description dans le passé, pas un récit ponctuel (Il ne s’agit pas d’un événement qui a eu lieu une fois, mais d’un état continu dans le passé)">
+                                    un bar étudiant
+                                </span>
+                                qui (<b title="situait">se situer</b>)
+                                <input type="text" pattern="se situait">
+                                sur le campus de l’université.
+                            </span>
 
 
                             Ces soirs-là, (<b title="c'était">ce être</b>)
@@ -412,7 +419,10 @@
                             une grande journée !
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Pendant la journée</span>,
+                                <span class="hint"
+                                    title="L’imparfait: le déroulement habituel ou continu d’un événement dans le passé, pas un fait ponctuel
+                On ne raconte pas un jour précis où la journée s’est déroulée, on décrit comment ces journées se déroulaient.">Pendant
+                                    la journée</span>,
                                 qui (<b title="se passait">se passer</b>)
                                 <input type="text" pattern="se passait">
                                 au parc municipal de la ville, </span>
@@ -512,9 +522,15 @@
                             <input type="text" pattern="[Jj]'avais">
                             six ans.
 
-                            Nous (<b title="étions">être</b>)
-                            <input type="text" pattern="étions">
-                            en septembre.
+                            <span class="sentence-with-hint">
+                                Nous (<b title="étions">être</b>)
+                                <input type="text" pattern="étions">
+                                <span class="hint" title="L’imparfait: une situation ou un état dans le passé, et non un événement ponctuel.
+            Ici, on ne raconte pas un moment précis qui commence et s’achève, on décrit simplement le contexte temporel:
+            À ce moment-là, la situation était telle : nous étions en septembre.">
+                                    en septembre.
+                                </span>
+                            </span>
 
                             Il (<b title="faisait">faire</b>)
                             <input type="text" pattern="faisait">
@@ -529,10 +545,14 @@
                                 <span class="hint" title="">Depuis des semaines</span>,
                                 elle (<b title="préparait|avait préparé">préparer</b>)
                                 <input type="text" pattern="préparait|avait préparé">
-                                tout
                             </span>
-                            ce qu’il (<b title="me fallait">me falloir</b>)
-                            <input type="text" pattern="me fallait">
+                            <span class="sentence-with-hint">
+                                <span class="hint" title="L’imparfait: un besoin ou une nécessité en tant qu’état continu dans le passé, pas un événement ponctuel.
+        Ce besoin n’est pas vu comme un instant précis qui commence et s’achève, mais comme une condition qui durait.
+                                ">tout ce</span>
+                                qu’il (<b title="me fallait">me falloir</b>)
+                                <input type="text" pattern="me fallait">
+                            </span>
                             .
 
                             <span class="sentence-with-hint">
@@ -569,7 +589,8 @@
 
                             <span class="sentence-with-hint">
                                 <span class="hint" title="Le passé composé: c’est une action terminée,
-                                imparfait suggérerait que l’attente est en cours au moment de parler">
+            imparfait suggérerait que l’attente est en cours au moment de parler
+            le repère est le présent (J’ai l’impression), donc le plus-que-parfait n’est pas nécessaire.">
                                     J’ai l’impression</span> que nous (<b title="avons attendu">attendre</b>)
                                 <input type="text" class="wide" pattern="avons attendu">
                                 très longtemps.
@@ -591,7 +612,9 @@
                             .
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">À ce moment-là</span>,
+                                <span class="hint"
+                                    title="Le passé composé: moment précis et ponctuel où le sentiment a surgi, pas d’un état durable.">À
+                                    ce moment-là</span>,
                                 je (<b title="me suis senti">se sentir</b>)
                                 <input type="text" pattern="me suis senti">
                                 très malheureux.
